Some Findbugs suggestions